--- a/baby-gifts.html
+++ b/baby-gifts.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Visit Dingle Dangle Baby to browse a large assortment of baby gift bundles. Ideal for special occasions, newborns, and babies. Thoughtful, superior presents for each newborn."
-    />
+      content="Visit Dingle Dangle Baby to browse a large assortment of baby gift bundles. Ideal for special occasions, newborns, and babies. Thoughtful, superior presents for each newborn.">
+    <meta name="keywords" content="baby gift sets, newborn gifts, first birthday gifts, baby blankets, holiday-themed baby gifts, baby clothing">
+    <meta name="author" content="Dingle Dangle Baby Team">
     <title>
       Baby Gift Sets - Insightful & Useful Presents for Any Occasion
     </title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--https://icons8.com/icon/111064/d-->
-  </head>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-DCB1D7B70V');
 </script>
+  </head>
+  
   <body>
     <!-- Navigation -->
     <header>
@@ -32,7 +33,7 @@
             <img
               src="./images/logo.png"
               alt="Dingle Dangle Baby Logo"
-            /><!--https://icons8.com/icon/111064/d-->
+            ><!--https://icons8.com/icon/111064/d-->
             Dingle Dangle Baby
           </a>
           <ul class="nav-links">
@@ -57,7 +58,7 @@
           src="./images/custom-baby-giftset.jpg"
           alt="Gift set of customized for baby"
           class="hero-banner"
-        />
+        >
         <div class="hero-text">
           <h1>Wonderful Baby Gift Sets for Newborns and Infants</h1>
           <p>
