--- a/baby-toys.html
+++ b/baby-toys.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Get the top baby toys for babies, including entertaining, safety, and educational options to keep your child occupied and entertained. Get premium baby toys right now at Dingle Dangle Baby.">
+  <meta name="keywords" content="baby toys, infant toys, safe baby toys, educational baby toys, teething toys, musical baby toys, interactive baby books, stacking blocks, play mats, activity centers, soft toys, Dingle Dangle Baby, baby gifts, developmental toys, baby playtime, premium baby toys">
+  <meta name="author" content="Dingle Dangle Baby Team">
   <title>Top Infant Toys: Fun, Safe, and Educative Baby Playthings</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/x-icon" href="./images/favicon.png"><!--https://icons8.com/icon/111064/d-->
+   <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+   gtag('config', 'G-DCB1D7B70V');
+ </script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-DCB1D7B70V');
-</script>
 <body>
   <!-- Navigation -->
   <header>
