--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Discover our selection of sustainable materials used to make eco-friendly baby goods. Purchase organic baby supplies to help create a more sustainable future."
-    />
+      content="Discover our selection of sustainable materials used to make eco-friendly baby goods. Purchase organic baby supplies to help create a more sustainable future.">
+    <meta name="keywords" content="eco-friendly baby products, sustainable baby goods, organic baby supplies, non-toxic baby products, bamboo baby products, wooden baby toys, organic infant clothes, natural baby toys, sustainable parenting, ethical baby products, eco-friendly infant items, Dingle Dangle Baby, safe baby products, durable baby goods, environmentally friendly baby products">
+    <meta name="author" content="Dingle Dangle Baby Team">
     <title>Eco-Friendly Infant Products, Dingle Dangle Baby</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--https://icons8.com/icon/111064/d-->
-  </head>
-  <!-- Google tag (gtag.js) -->
+     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-DCB1D7B70V');
 </script>
+  </head>
+  
   <body>
     <!-- Navigation -->
     <header>
@@ -30,7 +31,7 @@
             <img
               src="./images/logo.png"
               alt="Dingle Dangle Baby Logo"
-            /><!--https://icons8.com/icon/111064/d-->
+            ><!--https://icons8.com/icon/111064/d-->
             Dingle Dangle Baby
           </a>
           <ul class="nav-links">
@@ -55,7 +56,7 @@
           src="./images/Eco-Friendly-Baby-Products.jpg"
           alt="Collection of eco-friendly baby products"
           class="hero-banner"
-        />
+        >
         <div class="hero-text">
           <h1>Adopt Eco-Friendly Baby Products</h1>
           <p>
