--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Dingle Dangle Bay offers the greatest newborn gift bundles and baby presents. Discover unique gifts for new parents, such as interactive baby toys for bonding and diaper change."
-    />
+      content="Dingle Dangle Bay offers the greatest newborn gift bundles and baby presents. Discover unique gifts for new parents, such as interactive baby toys for bonding and diaper change.">
+    <meta
+      name="keywords"
+      content="Dingle Dangle Baby, baby gift sets, newborn gifts, new parent gifts, interactive baby toys, baby essentials, eco-friendly baby products, baby care, baby bonding toys, organic baby clothes, new parent presents, baby playtime bundle, baby care set">
+    <meta name="author" content="Dingle Dangle Baby Team">
     <title>Dingle Dangle Baby Gift Sets: Best Gifts for New Parents</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--https://icons8.com/icon/111064/d-->
-  </head>
-  <!-- Google tag (gtag.js) -->
+     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-DCB1D7B70V');
 </script>
+  </head>
+  
   <body>
     <!-- Navigation -->
     <header>
@@ -30,7 +33,7 @@
             <img
               src="./images/logo.png"
               alt="Dingle Dangle Baby Logo"
-            /><!--https://icons8.com/icon/111064/d-->
+            ><!--https://icons8.com/icon/111064/d-->
             Dingle Dangle Baby
           </a>
           <ul class="nav-links">
@@ -55,7 +58,7 @@
           src="./images/Mother-and-Baby-Boy-Playing-with-Wooden-Toy.webp"
           alt=" Mother and baby boy playing with a wooden toy together"
           class="hero-banner"
-        />
+        >
         <div class="hero-text">
           <h1>
             Welcome to Dingle Dangle Baby – The Greatest New Parent Toys & Baby
@@ -79,7 +82,7 @@
               <img
                 src="./images/family-two-mums-having-baby.jpg"
                 alt="family two mums having baby"
-              />
+              >
               <!-- https://img.freepik.com/free-photo/family-two-mums-having-baby_23-2149168813.jpg?t=st=1733691210~exp=1733694810~hmac=260447fd4eb33525f44363a2828dbd658ed423fd3e67823f0c353a5bc5c906bd&w=996 -->
             </div>
             <div class="intro-content">
@@ -147,7 +150,7 @@
                 src="./images/gift-collection.png"
                 alt="gift collection"
                 class="set-img"
-              />
+              >
               <!-- https://icons8.com/icon/8289/gift -->
               <h3>Newborn Baby Gifts</h3>
               <p>
@@ -160,7 +163,7 @@
                 src="./images/playtime-music.png"
                 alt="playtime music"
                 class="set-img"
-              />
+              >
               <!-- https://icons8.com/icon/kpl41iPTp8sk/musical -->
               <h3>Playtime Bundle</h3>
               <p>
@@ -173,7 +176,7 @@
                 src="./images/eco-friendly.png"
                 alt="Eco-Friendly Baby Care Set"
                 class="set-img"
-              />
+              >
               <!-- https://icons8.com/icon/66066/eco-friendly-cleaning-->
               <h3>Eco-Friendly Care Set</h3>
               <p>
@@ -186,7 +189,7 @@
                 src="./images/baby sleepy time.png"
                 alt="Baby Sleepy Time"
                 class="set-img"
-              />
+              >
               <!--https://icons8.com/icon/61967/sleeping-baby-->
               <h3>Baby Sleepy Time Set</h3>
               <p>
