--- a/parenting-hub.html
+++ b/parenting-hub.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Examine a variety of imaginative and fashionable nursery room decor ideas to create a warm, secure, and endearing environment for your infant. Look for the ideal inspiration, whether it’s theme-based designs or contemporary elements."
-    />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Examine a variety of imaginative and fashionable nursery room decor ideas to create a warm, secure, and endearing environment for your infant. Look for the ideal inspiration, whether it’s theme-based designs or contemporary elements.">
+    <meta name="keywords" content="nursery room decor, creative nursery ideas, baby room designs, nursery themes, modern nursery, vintage nursery, bohemian nursery, safari theme nursery, space theme nursery, natural-inspired nursery, Scandinavian nursery, mid-century modern nursery, nursery color schemes, baby room storage, nursery safety tips, baby room furniture, stylish nursery ideas, contemporary nursery design">
+    <meta name="author" content="Parenting Hub by Dingle Dangle Baby Team">
     <title>Creative Nursery Room Decorating Ideas for All Styles.</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--https://icons8.com/icon/111064/d-->
-  </head>
-  <!-- Google tag (gtag.js) -->
+     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-DCB1D7B70V"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-DCB1D7B70V');
 </script>
+  </head>
+ 
   <body>
     <!-- Navigation -->
     <header>
@@ -28,7 +29,7 @@
             <img
               src="./images/logo.png"
               alt="Dingle Dangle Baby Logo"
-            /><!--https://icons8.com/icon/111064/d-->
+            ><!--https://icons8.com/icon/111064/d-->
             Dingle Dangle Baby
           </a>
           <ul class="nav-links">
@@ -52,7 +53,7 @@
           src="./images/Modern-Nursery-Ensemble-Room.jpg"
           alt="Modern nursery with pastel colors, and soft furnishings."
           class="hero-banner"
-        />
+        >
         <div class="hero-text">
           <h1>
             Amazing Nursery Room Decor Ideas to Make Your Baby’s Space Feel
@@ -127,7 +128,7 @@
 
         <div class="theme-grid">
           <div class="theme-card">
-            <img src="./images/star.png" alt="star" class="icon" />
+            <img src="./images/star.png" alt="star" class="icon">
             <!--https://icons8.com/icon/60003/star-->
             <h3>Traditional & Timeless</h3>
             <p>
@@ -141,7 +142,7 @@
               src="./images/natural-food.png"
               alt="gift collection"
               class="icon"
-            />
+            >
             <!--https://icons8.com/icon/96085/natural-food-->
             <h3>Natural-Inspired</h3>
             <p>
@@ -151,7 +152,7 @@
           </div>
 
           <div class="theme-card">
-            <img src="./images/safari.png" alt="gift collection" class="icon" />
+            <img src="./images/safari.png" alt="gift collection" class="icon" >
             <!--https://icons8.com/icon/11110/safari-->
             <h3>Safari Adventure</h3>
             <p>
@@ -165,7 +166,7 @@
               src="./images/space-shuttle.png"
               alt="gift collection"
               class="icon"
-            />
+            >
             <!--https://icons8.com/icon/62237/space-shuttle-->
             <h3>Space & Beyond</h3>
             <p>
@@ -179,7 +180,7 @@
               src="./images/vintage-camera.png"
               alt="gift collection"
               class="icon"
-            />
+            >
             <!--https://icons8.com/icon/745/vintage-camera-->
             <h3>Vintage Charm</h3>
             <p>
@@ -193,7 +194,7 @@
               src="./images/painting.png"
               alt="gift collection"
               class="icon"
-            />
+            >
             <!--https://icons8.com/icon/lOvhiSMwKCwC/artist-palette-->
             <h3>Bohemian Bliss</h3>
             <p>
