--- a/baby-gifts.html
+++ b/baby-gifts.html
@@ -14,9 +14,16 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!--https://icons8.com/icon/111064/d-->
-   
   </head>
-  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-08RJ7M015X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-08RJ7M015X');
+</script>
   <body>
     <!-- Navigation -->
     <header>
