--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Dingle Dangle Bay offers the greatest newborn gift bundles and baby presents. Discover unique gifts for new parents, such as interactive baby toys for bonding and diaper change.">
+      content="Dingle Dangle Bay offers the best newborn gift bundles and baby presents. Discover unique gifts for new parents, including interactive baby toys and diaper change essentials.">
     <meta
       name="keywords"
       content="Dingle Dangle Baby, baby gift sets, newborn gifts, new parent gifts, interactive baby toys, baby essentials, eco-friendly baby products, baby care, baby bonding toys, organic baby clothes, new parent presents, baby playtime bundle, baby care set">
