--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Dingle Dangle Bay offers newborn gift bundles and presents. Find unique gifts for parents, like baby toys for bonding and essentials for diaper changes.">
+      content="Dingle Dangle Bay offers newborn gift bundles and presents. Find unique gifts for parents, like baby toys for bonding and essentials for diaper changes">
     <meta
       name="keywords"
       content="Dingle Dangle Baby, baby gift sets, newborn gifts, new parent gifts, interactive baby toys, baby essentials, eco-friendly baby products, baby care, baby bonding toys, organic baby clothes, new parent presents, baby playtime bundle, baby care set">
