--- a/baby-gifts.html
+++ b/baby-gifts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Visit Dingle Dangle Baby to browse a large assortment of baby gift bundles. Ideal for special occasions, newborns, and babies. Thoughtful, superior presents for each newborn.">
+      content="Visit Dingle Dangle Baby for baby gift bundles perfect for newborns and special occasions. Thoughtful, high-quality presents for every baby and parent.">
     <meta name="keywords" content="baby gift sets, newborn gifts, first birthday gifts, baby blankets, holiday-themed baby gifts, baby clothing">
     <meta name="author" content="Dingle Dangle Baby Team">
     <title>
