--- a/baby-toys.html
+++ b/baby-toys.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get the top baby toys for babies, including entertaining, safety, and educational options to keep your child occupied and entertained. Get premium baby toys right now at Dingle Dangle Baby.">
+  <meta name="description" content="Get top baby toys at Dingle Dangle Baby, including entertaining, safe, and educational options to keep your child engaged. Shop premium baby toys today.">
   <meta name="keywords" content="baby toys, infant toys, safe baby toys, educational baby toys, teething toys, musical baby toys, interactive baby books, stacking blocks, play mats, activity centers, soft toys, Dingle Dangle Baby, baby gifts, developmental toys, baby playtime, premium baby toys">
   <meta name="author" content="Dingle Dangle Baby Team">
   <title>Top Infant Toys: Fun, Safe, and Educative Baby Playthings</title>
