--- a/parenting-hub.html
+++ b/parenting-hub.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Examine a variety of imaginative and fashionable nursery room decor ideas to create a warm, secure, and endearing environment for your infant. Look for the ideal inspiration, whether it’s theme-based designs or contemporary elements.">
+    <meta name="description" content="Explore creative nursery decor ideas to create a warm, safe, and charming space for your baby. Find inspiration in theme-based or modern design elements.">
     <meta name="keywords" content="nursery room decor, creative nursery ideas, baby room designs, nursery themes, modern nursery, vintage nursery, bohemian nursery, safari theme nursery, space theme nursery, natural-inspired nursery, Scandinavian nursery, mid-century modern nursery, nursery color schemes, baby room storage, nursery safety tips, baby room furniture, stylish nursery ideas, contemporary nursery design">
     <meta name="author" content="Parenting Hub by Dingle Dangle Baby Team">
     <title>Creative Nursery Room Decorating Ideas for All Styles.</title>
