--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
       name="description"
-      content="Discover our selection of sustainable materials used to make eco-friendly baby goods. Purchase organic baby supplies to help create a more sustainable future.">
+      content="Discover eco-friendly baby products made from sustainable materials. Shop organic baby supplies to support a more sustainable future for your little one.">
     <meta name="keywords" content="eco-friendly baby products, sustainable baby goods, organic baby supplies, non-toxic baby products, bamboo baby products, wooden baby toys, organic infant clothes, natural baby toys, sustainable parenting, ethical baby products, eco-friendly infant items, Dingle Dangle Baby, safe baby products, durable baby goods, environmentally friendly baby products">
     <meta name="author" content="Dingle Dangle Baby Team">
     <title>Eco-Friendly Infant Products, Dingle Dangle Baby</title>
