--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         >
         <div class="hero-text">
           <h1>
-            Welcome to Dingle Dangle Baby – The Greatest New Parent Toys & Baby
-            Presents
+            Welcome to Dingle Dangle Baby – The Best New Parent Toys & Gifts
           </h1>
           <p>
             We understand how challenging it can be to find the perfect gift for
