--- a/parenting-hub.html
+++ b/parenting-hub.html
@@ -56,8 +56,7 @@
         >
         <div class="hero-text">
           <h1>
-            Amazing Nursery Room Decor Ideas to Make Your Baby’s Space Feel
-            Better.
+            Amazing Nursery Decor Ideas to Make Your Baby’s Space Feel Better
           </h1>
           <p>
             Decorating your baby's nursery is an exciting journey to create a
