--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
             </div>
             <div class="intro-content">
               <h2>
-                Shop The Dingle Dangle Collection and get Original Baby Present
-                Sets for New Parents
+                Shop Dingle Dangle for Original Baby Gift Sets for New Parents
               </h2>
               <p>
                 Welcome to Dingle Dangle Baby, where we specialize in the
