--- a/parenting-hub.html
+++ b/parenting-hub.html
@@ -69,8 +69,7 @@
       <!-- How to Select the Ideal Nursery Room Décor -->
       <section id="decor-ideas">
         <h2>
-          How to Select the Ideal Nursery Room Décor for Your Infant’s
-          Individuality
+         How to Choose the Ideal Nursery Decor for Your Infant’s Personality
         </h2>
         <div class="content-container">
           <p>
