--- a/baby-gifts.html
+++ b/baby-gifts.html
@@ -79,59 +79,56 @@
           selection of thoughtful and practical gift sets ideal for baby
           showers, birthdays, and more.
         </p>
+<div class="gift-content">
+  <!-- Section 1 -->
+  <div class="content-block">
+    <div class="text-content">
+      <h2>Gift Sets for Newborns</h2>
+      <p>
+        Celebrate the arrival of a little one with cozy and personalized gifts. From soft blankets to adorable onesies, these sets offer charm and practicality for new parents. 
+        Perfectly curated to cater to the needs of both the baby and the parents, these sets ensure comfort and convenience from the start. Whether you're seeking a sweet welcome gift or a practical essential, our newborn gift sets have something for every family.
+      </p>
+    </div>
+    <div class="divider"></div>
+  </div>
 
-        <div class="gift-content">
-          <!-- Section 1 -->
-          <div class="content-block">
-            <div class="text-content">
-              <h2>Gift Sets for Newborns</h2>
-              <p>
-                Celebrate the arrival of a little one with cozy and personalized
-                gifts. From soft blankets to adorable onesies, these sets offer
-                charm and practicality for new parents.
-              </p>
-            </div>
-            <div class="divider"></div>
-          </div>
+  <!-- Section 2 -->
+  <div class="content-block">
+    <div class="text-content">
+      <h2>Baby Shower Gift Sets</h2>
+      <p>
+        Make baby showers extra special with swaddles, organic baby care products, and pampering essentials that ensure comfort and convenience for parents and their baby. 
+        Our baby shower gift sets offer everything needed to pamper the new parents and keep their newborn comfortable. From luxurious organic skincare to thoughtful accessories, our sets make the perfect gift for this joyful occasion.
+      </p>
+    </div>
+    <div class="divider"></div>
+  </div>
 
-          <!-- Section 2 -->
-          <div class="content-block">
-            <div class="text-content">
-              <h2>Baby Shower Gift Sets</h2>
-              <p>
-                Make baby showers extra special with swaddles, organic baby care
-                products, and pampering essentials that ensure comfort and
-                convenience for parents and their baby.
-              </p>
-            </div>
-            <div class="divider"></div>
-          </div>
+  <!-- Section 3 -->
+  <div class="content-block">
+    <div class="text-content">
+      <h2>First Birthday Gift Sets</h2>
+      <p>
+        Mark this memorable milestone with personalized baby books, developmental toys, and keepsakes that bring smiles and preserve memories for years to come. 
+        Celebrate your little one's first year with a gift set that encourages growth and learning, while also cherishing the special moments of this important milestone. Our first birthday sets include fun, interactive toys, custom keepsakes, and much more.
+      </p>
+    </div>
+    <div class="divider"></div>
+  </div>
 
-          <!-- Section 3 -->
-          <div class="content-block">
-            <div class="text-content">
-              <h2>First Birthday Gift Sets</h2>
-              <p>
-                Mark this memorable milestone with personalized baby books,
-                developmental toys, and keepsakes that bring smiles and preserve
-                memories for years to come.
-              </p>
-            </div>
-            <div class="divider"></div>
-          </div>
+  <!-- Section 4 -->
+  <div class="content-block">
+    <div class="text-content">
+      <h2>Holiday-Themed Baby Gift Sets</h2>
+      <p>
+        Celebrate holidays with themed baby outfits, plush toys, and keepsakes like ornaments, making festive moments even more delightful for parents and their little ones. 
+        Whether it's Christmas, Easter, or another special occasion, our holiday-themed baby gift sets bring warmth, cheer, and lasting memories to the season. Perfect for creating seasonal traditions with your baby.
+      </p>
+    </div>
+  </div>
+</div>
 
-          <!-- Section 4 -->
-          <div class="content-block">
-            <div class="text-content">
-              <h2>Holiday-Themed Baby Gift Sets</h2>
-              <p>
-                Celebrate holidays with themed baby outfits, plush toys, and
-                keepsakes like ornaments, making festive moments even more
-                delightful for parents and their little ones.
-              </p>
-            </div>
-          </div>
-        </div>
+        
       </section>
     </main>
 
