--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -71,64 +71,57 @@
     <!-- Main Content -->
     <main>
       <section class="why-sustainable">
-        <h2>What Makes Sustainable Choices Better?</h2>
-        <ul>
-          <li>
-            <strong>Safe and Non-Toxic:</strong> Protects your baby’s health by
-            avoiding harmful chemicals.
-          </li>
-          <li>
-            <strong>Sustainability:</strong> Promotes a cleaner, greener planet
-            for future generations.
-          </li>
-          <li>
-            <strong>Ethical Practices:</strong> Supports fair trade and
-            responsible production.
-          </li>
-          <li>
-            <strong>Gentle Materials:</strong> Hypoallergenic and comfortable
-            for sensitive baby skin.
-          </li>
-          <li>
-            <strong>Cost Savings:</strong> Durable, reusable products that
-            reduce long-term costs.
-          </li>
-        </ul>
-      </section>
+  <h2>What Makes Sustainable Choices Better?</h2>
+  <ul>
+    <li>
+      <strong>Safe and Non-Toxic:</strong> Protects your baby’s health by avoiding harmful chemicals such as phthalates, BPA, and toxic dyes. Eco-friendly baby products are crafted from natural, non-toxic materials like organic cotton and bamboo, ensuring your baby’s safety and comfort.
+    </li>
+    <li>
+      <strong>Sustainability:</strong> Promotes a cleaner, greener planet for future generations. By choosing eco-friendly products, you're reducing the demand for synthetic materials, plastics, and harmful chemicals, which helps minimize pollution and waste.
+    </li>
+    <li>
+      <strong>Ethical Practices:</strong> Supports fair trade and responsible production. Many eco-conscious brands prioritize fair wages, ethical labor standards, and sustainable manufacturing, ensuring that your purchase contributes positively to both the environment and the people who make the products.
+    </li>
+    <li>
+      <strong>Gentle Materials:</strong> Hypoallergenic and comfortable for sensitive baby skin. Organic cotton, bamboo, and wooden products are gentle on delicate skin, reducing the risk of irritation or allergic reactions often caused by synthetic materials.
+    </li>
+    <li>
+      <strong>Cost Savings:</strong> Durable, reusable products that reduce long-term costs. While eco-friendly baby items may have a higher initial price, their durability and longevity make them a smart investment. Many products, such as organic clothing and wooden toys, can be reused, passed down, or repurposed.
+    </li>
+  </ul>
+</section>
 
-      <section class="products">
-        <h2>Eco-Friendly Infant Products We Provide</h2>
-        <div class="product-list">
-          <div class="product">
-            <h3>Organic Infant Clothes</h3>
-            <p>
-              Soft, chemical-free, and made from 100% organic cotton for your
-              baby’s delicate skin.
-            </p>
-          </div>
-          <div class="product">
-            <h3>All-Natural Baby Toys</h3>
-            <p>
-              Safe wooden and organic cotton toys that promote imaginative play
-              and motor skills.
-            </p>
-          </div>
-          <div class="product">
-            <h3>Wooden Products</h3>
-            <p>
-              Durable and eco-friendly wooden rattles, teethers, and activity
-              gyms.
-            </p>
-          </div>
-          <div class="product">
-            <h3>Bamboo Products</h3>
-            <p>
-              Eco-friendly swaddles, towels, and clothing made from sustainable
-              bamboo fibers.
-            </p>
-          </div>
-        </div>
-      </section>
+<section class="products">
+  <h2>Eco-Friendly Infant Products We Provide</h2>
+  <div class="product-list">
+    <div class="product">
+      <h3>Organic Infant Clothes</h3>
+      <p>
+        Soft, chemical-free, and made from 100% organic cotton for your baby’s delicate skin. Our organic infant clothes are free from harmful pesticides and synthetic dyes, making them the safest and most comfortable option for your baby. Choose from onesies, rompers, socks, and caps that are not only eco-friendly but also breathable and gentle on your baby's skin.
+      </p>
+    </div>
+    <div class="product">
+      <h3>All-Natural Baby Toys</h3>
+      <p>
+        Safe wooden and organic cotton toys that promote imaginative play and motor skills. Made without toxic chemicals like BPA or phthalates, these toys are designed to be both fun and educational. Encourage your baby’s development with natural toys that are durable and safe for exploration.
+      </p>
+    </div>
+    <div class="product">
+      <h3>Wooden Products</h3>
+      <p>
+        Durable and eco-friendly wooden rattles, teethers, and activity gyms. These wooden baby products are crafted from sustainably sourced materials and are built to last, reducing the need for disposable plastic toys. They're perfect for teething babies and can be passed down through generations.
+      </p>
+    </div>
+    <div class="product">
+      <h3>Bamboo Products</h3>
+      <p>
+        Eco-friendly swaddles, towels, and clothing made from sustainable bamboo fibers. Bamboo is one of the most sustainable materials, requiring no pesticides and growing quickly without water-intensive farming. These bamboo products are naturally antibacterial, making them gentle on your baby’s skin while also being highly absorbent.
+      </p>
+    </div>
+  </div>
+</section>
+
+
     </main>
 
     <!-- Footer -->
