--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -98,35 +98,37 @@
         </ul>
       </section>
 
-      <section class="products">
+    <section class="products">
         <h2>Eco-Friendly Infant Products We Provide</h2>
         <div class="product-list">
           <div class="product">
             <h3>Organic Infant Clothes</h3>
             <p>
               Soft, chemical-free, and made from 100% organic cotton for your
-              baby’s delicate skin.
+              baby’s delicate skin.These garments are safe for your kid because they don't 
+              include any dangerous chemicals, dyes, or pesticides.
             </p>
           </div>
           <div class="product">
             <h3>All-Natural Baby Toys</h3>
             <p>
               Safe wooden and organic cotton toys that promote imaginative play
-              and motor skills.
+              and motor skills.There are no harmful chemicals like phthalates or BPA in these toys.
             </p>
           </div>
           <div class="product">
             <h3>Wooden Products</h3>
             <p>
               Durable and eco-friendly wooden rattles, teethers, and activity
-              gyms.
+              gyms.These durable wooden toys are responsibly sourced and built to withstand everyday baby play.
             </p>
           </div>
           <div class="product">
             <h3>Bamboo Products</h3>
             <p>
               Eco-friendly swaddles, towels, and clothing made from sustainable
-              bamboo fibers.
+              bamboo fibers.Additionally, bamboo 
+              has antibacterial properties by nature, keeping your child clean. 
             </p>
           </div>
         </div>
