--- a/parenting-hub.html
+++ b/parenting-hub.html
@@ -126,7 +126,7 @@
 
         <div class="theme-grid">
           <div class="theme-card">
-            <img src="./images/star.png" alt="star" class="icon">
+            <img src="./images/star.png" alt="star icon" class="icon">
             <!--https://icons8.com/icon/60003/star-->
             <h3>Traditional & Timeless</h3>
             <p>
@@ -138,7 +138,7 @@
           <div class="theme-card">
             <img
               src="./images/natural-food.png"
-              alt="gift collection"
+              alt="natural food icon"
               class="icon"
             >
             <!--https://icons8.com/icon/96085/natural-food-->
@@ -150,7 +150,7 @@
           </div>
 
           <div class="theme-card">
-            <img src="./images/safari.png" alt="gift collection" class="icon" >
+            <img src="./images/safari.png" alt="safari icon" class="icon" >
             <!--https://icons8.com/icon/11110/safari-->
             <h3>Safari Adventure</h3>
             <p>
@@ -162,7 +162,7 @@
           <div class="theme-card">
             <img
               src="./images/space-shuttle.png"
-              alt="gift collection"
+              alt="space shuttle icon"
               class="icon"
             >
             <!--https://icons8.com/icon/62237/space-shuttle-->
@@ -176,7 +176,7 @@
           <div class="theme-card">
             <img
               src="./images/vintage-camera.png"
-              alt="gift collection"
+              alt="vintage camera icon"
               class="icon"
             >
             <!--https://icons8.com/icon/745/vintage-camera-->
@@ -190,7 +190,7 @@
           <div class="theme-card">
             <img
               src="./images/painting.png"
-              alt="gift collection"
+              alt="painting icon"
               class="icon"
             >
             <!--https://icons8.com/icon/lOvhiSMwKCwC/artist-palette-->
