--- a/baby-gifts.html
+++ b/baby-gifts.html
@@ -157,6 +157,14 @@
               </li>
             </ul>
           </div>
+          <div class="footer-links">
+            <h4>Connect with us</h4>
+            <ul>
+              <li><a href="https://www.facebook.com/">Facebook</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+            </ul>
+          </div>
           <div class="footer-contact">
             <h4>Contact Us</h4>
             <p>Email: support@dingledanglebaby.com</p>
