--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
           <div class="footer-links">
             <h4>Connect with us</h4>
             <ul>
-              <li><a href="https://www.facebook.com/">Facebook</a></li>
-              <li><a href="https://www.instagram.com/">Instagram</a></li>
-              <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+              <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+              <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+              <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
             </ul>
           </div>
           <div class="footer-contact">
