--- a/eco-friendly-products.html
+++ b/eco-friendly-products.html
@@ -74,6 +74,10 @@
 
  <section class="why-sustainable">
         <h2>What Makes Sustainable Choices Better?</h2>
+   <p>Sustainability in infant product selection extends beyond the materials used. It includes every 
+          stage of the product's lifecycle, from manufacture to disposal. Natural, organic, and non-toxic 
+          substances that are better for the environment and your baby's health are used to make eco
+          friendly baby goods. Let's examine why these decisions are so crucial in brief: </p>
         <ul>
           <li>
             <strong>Safe and Non-Toxic:</strong> Protects your baby’s health by
