--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section class="hero">
       <div class="hero-container">
         <img
-          src="./images/Mother-and-Baby-Boy-Playing-with-Wooden-Toy.webp"
+          src="./images/Mother-and-Baby-Boy-Playing-with-Wooden-Toy.jpg"
           alt=" Mother and baby boy playing with a wooden toy together"
           class="hero-banner"
         >
